--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,54 +1,102 @@
-* {
+body {
   margin: 0;
   font-family: Arial, sans-serif;
+  background-color: #11191f;
 }
 
 .navbar {
-  padding: 0.5rem 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #000000;
+  padding: 1rem;
 }
 
-.logo {
-  display: flex;
-  align-items: center;
+.logo a {
+  text-decoration: none;
+  color: #333;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
-.icons {
+.social-icons {
   display: flex;
-  gap: 0.5rem;
+  gap: 1rem;
 }
-.icons img {
+
+.social-icons img {
   width: 24px;
   height: 24px;
 }
 
-.mains {
+.main-area {
+  display: flex;
   width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
-.btn {
-  background-color: #f0f0f0;
-  width: 100%;
+.main-button {
+  width: 38%;
+  padding: 0.8rem;
+  background-color: #ffd700;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  border: none;
+  text-transform: uppercase;
 }
 
-.btn:hover {
-  background-color: #f0f0f0;
+.main-button:hover {
+  background-color: #11191f;
+  color: #ffd700;
+}
+
+.category-area {
+  background-color: #ffd700;
+  border: #ffd700;
+  display: flex;
+  overflow-x: auto;
+  z-index: 2;
+  margin-top: -0.2rem;
+}
+
+.category-button {
+  text-transform: capitalize;
+  width: 20%;
+  background-color: #11191f;
+  color: #ffd700;
+  padding: 0.8rem;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  border: none;
+  margin-left: -2%;
+}
+
+.category-button:hover {
+  background-color: #ffd700;
+  color: #11191f;
+}
+
+.product-list {
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(200px, 1fr)
+  );
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .card {
+  display: flex;
   border: 1px solid #e0e0e0;
   border-radius: 4px;
-  background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 }
 
 .card img {
-  width: 100%;
-  height: 200px;
+  width: 30%;
+  height: auto;
   object-fit: cover;
 }
 
@@ -61,10 +109,7 @@
   font-weight: bold;
 }
 
-.text-lg {
+.price {
   font-size: 1.125rem;
-}
-
-.font-bold {
   font-weight: bold;
 }
