--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,199 +5,9 @@ body {
   overflow: hidden;
 }
 
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
+/* Responsive Styles */
+@media (max-width: 768px) {
 }
 
-.social-icons {
-  display: flex;
-  gap: 1rem;
-}
-
-.home-container {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.image-container {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: calc(
-    100vh - 70px
-  ); /* Adjust the height to subtract the header */
-  overflow: hidden;
-  z-index: 1;
-}
-
-.text-buttons {
-  position: absolute;
-  bottom: 5%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  z-index: 2;
-}
-
-.text-button {
-  width: 130px;
-  height: 130px;
-  background-color: #ffd700;
-  font-size: 1.5em;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.footer-link {
-  position: absolute;
-  bottom: 8%;
-  right: 6%;
-  z-index: 2;
-}
-
-.main-area {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-button {
-  width: 38%;
-  padding: 0.8rem;
-  background-color: #ffd700;
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-  border: none;
-  text-transform: uppercase;
-}
-
-.main-button:hover,
-.main-button.selected {
-  background-color: #11191f;
-  color: #ffd700;
-}
-
-.category-area {
-  background-color: #ffd700;
-  border: #ffd700;
-  display: flex;
-  overflow-x: auto;
-  z-index: 2;
-  margin-top: -0.2rem;
-}
-
-.category-button {
-  text-transform: capitalize;
-  width: 25%;
-  background-color: #11191f;
-  color: #ffd700;
-  padding: 0.8rem;
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-  border: none;
-  margin-left: -2%;
-}
-
-.category-button:hover,
-.category-button.selected {
-  background-color: #ffd700;
-  color: #11191f;
-}
-
-.product-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  margin: 0;
-  padding: 20px;
-}
-
-.card {
-  position: relative;
-  width: 400px; /* Kartın genişliğini belirleyebilirsiniz */
-  height: 400px; /* Kartın yüksekliğini belirleyebilirsiniz */
-  border-radius: 15px;
-  overflow: hidden;
-  transition: transform 0.2s;
-  margin: 20px; /* Kartlar arasındaki boşluk */
-}
-
-.card:hover {
-  transform: scale(1.05);
-}
-
-.product-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.card-body {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 15px;
-  box-sizing: border-box;
-  color: white;
-  z-index: 1; /* Üst katmanda olmasını sağlar */
-}
-
-.card::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(
-    0,
-    0,
-    0,
-    0.5
-  ); /* Gölge rengi ve opaklık */
-  z-index: 1; /* Arka planda olmasını sağlar */
-}
-
-.card:hover::before {
-  background: rgba(
-    0,
-    0,
-    0,
-    0
-  ); /* Hover durumunda gölgeyi kaldırır */
-}
-
-.card-title {
-  font-size: 2.2em;
-  margin: 0;
-  align-self: flex-start;
-}
-
-.content {
-  font-size: 1.5em;
-  text-align: center;
-  margin: auto 0;
-}
-
-.price {
-  font-size: 2em;
-  margin: 0;
-  align-self: flex-end;
-  text-align: right;
-}
-
-.card:hover .card-body {
-  display: none;
+@media (max-width: 480px) {
 }
