--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -7,8 +7,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
   }
 
   .imageContainer {
@@ -17,7 +16,6 @@
     height: calc(
       100vh - 70px
     ); /* Adjust the height to subtract the header */
-    overflow: hidden;
     z-index: 1;
   }
 
