--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -7,6 +7,7 @@
 
 @media (max-width: 480px) {
   .navbar {
+    height: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
