--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -7,7 +7,11 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    height: calc(
+      100vh - 102px
+    ); /* Adjust the height to subtract the header */
     width: 100%;
+    padding: 0;
   }
 
   .imageContainer {
