refactor: Optimize image loading and update styles for responsive design

--- a/src/styles/productlist.module.css
+++ b/src/styles/productlist.module.css
@@ -1,3 +1,95 @@
+.productList {
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(300px, 1fr)
+  ); /* Kartları otomatik olarak sığdırır */
+  gap: 1rem;
+  justify-items: center;
+  padding: 1.5em;
+}
+
+.card {
+  position: relative;
+  width: 100%;
+  max-width: 300px; /* Kartın genişliğini belirleyebilirsiniz */
+  height: 400px; /* Kartın yüksekliğini belirleyebilirsiniz */
+  border-radius: 20px;
+  overflow: hidden;
+  transition: transform 0.2s;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.productImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cardBody {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 15px;
+  box-sizing: border-box;
+  color: white;
+  z-index: 1; /* Üst katmanda olmasını sağlar */
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(
+    0,
+    0,
+    0,
+    0.5
+  ); /* Gölge rengi ve opaklık */
+  z-index: 1; /* Arka planda olmasını sağlar */
+}
+
+.card:hover::before {
+  background: rgba(
+    0,
+    0,
+    0,
+    0
+  ); /* Hover durumunda gölgeyi kaldırır */
+}
+
+.cardTitle {
+  font-size: 2.2em;
+  margin: 0;
+  align-self: flex-start;
+}
+
+.content {
+  font-size: 1.5em;
+  text-align: center;
+  margin: auto 0;
+}
+
+.price {
+  font-size: 2em;
+  margin: 0;
+  align-self: flex-end;
+  text-align: right;
+}
+
+.card:hover .cardBody {
+  display: none;
+}
+
 @media (max-width: 480px) {
   .productList {
     display: flex;
