--- a/src/styles/categoryarea.module.css
+++ b/src/styles/categoryarea.module.css
@@ -2,7 +2,7 @@
 @media (max-width: 768px) {
 }
 
-@media (max-width: 1440px) {
+@media (min-width: 380px) {
   .categoryArea {
     display: flex;
     overflow-x: auto; /* X ekseninde kaydırılabilir */
