--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -2,7 +2,7 @@
 @media (max-width: 768px) {
 }
 
-@media (max-width: 1440px) {
+@media (min-width: 380px) {
   .footerLink {
     position: absolute;
     bottom: 10%;
