--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -2,7 +2,7 @@
 @media (max-width: 768px) {
 }
 
-@media (max-width: 1440px) {
+@media (min-width: 380px) {
   .homeContainer {
     display: flex;
     flex-direction: column;
