--- a/src/styles/menu.module.css
+++ b/src/styles/menu.module.css
@@ -2,7 +2,7 @@
 @media (max-width: 768px) {
 }
 
-@media (max-width: 1440px) {
+@media (min-width: 380px) {
   .container {
     height: auto;
     overflow-y: auto;
